Exercice 05/correction/wordpress-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: apilon-namespace
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
  - port: 80
    targetPort: 80
    name: http
