Exercice 05/correction/wordpress-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: apilon-namespace
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway # Indique quel ingress controller utiliser
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  rules:
  - http:
      paths:
      - path: /antoine
        backend:
          service:
            name: wordpress
            port:
              number: 80
        pathType: Prefix
